[package]
name = "r2js"
version = "0.0.0"
edition = "2021"
authors = ["Me"]
description = "Coming soon"
license = "MIT OR Apache-2.0"
repository = "https://github.com/maxwell8888/r2js"
homepage = "https://github.com/maxwell8888/r2js"
documentation = "https://docs.rs/r2js/latest/r2js/"
keywords = []
rust-version = "1.60.0"
publish = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
